# toolAddSubtitle

./: .env.example  .gitignore  README.md  pyproject.toml
src/subtitle_tool/: __init__.py  __main__.py  cli.py  config.py  downloader.py  exceptions.py  gui.py  pipeline.py  processor.py  quality.py  srt_utils.py  transcriber.py
tests/: test_subtitle_tool.py
