[project]
name = "subtitle-tool"
version = "1.2.0"
description = "Auto-add English subtitles + watermark to YouTube videos using Whisper AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
gui = [
    "customtkinter>=5.2.0",
]

[project.scripts]
subtitle-tool = "subtitle_tool.cli:main"
subtitle-tool-gui = "subtitle_tool.gui:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
